--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,10 @@
-.container{
-    display: flex;
-    margin-top: 10px;
+.container {
+  display: flex;
+  // height: 100vh;
+  // margin: auto;
 }
 
-
-.link{
-    text-decoration: none;
-    color: inherit;
+.link {
+  text-decoration: none;
+  color: inherit;
 }
