--- a/src/pages/Login/style.scss
+++ b/src/pages/Login/style.scss
@@ -1,9 +1,10 @@
 .login-page {
-  height: 100%;
+  height: 100vh;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   #login-form {
-    width: 40%;
+    width: 30%;
   }
 }
