--- a/src/pages/ProductList/productList.scss
+++ b/src/pages/ProductList/productList.scss
@@ -44,6 +44,10 @@
   #modal_detail_product_description {
     min-height: 150px;
   }
+  .ant-modal-title {
+    font-size: 22px;
+    color: #1890ff;
+  }
 }
 
 .form-edit-product-action {
