--- a/src/pages/Categories/style.scss
+++ b/src/pages/Categories/style.scss
@@ -1,3 +1,10 @@
 .categories-page {
   flex: 4;
+  padding-left: 20px;
+  padding-right: 20px;
+  .categories-page-action {
+    display: flex;
+    gap: 15px;
+    margin-bottom: 0;
+  }
 }
